--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F1 Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/style.css">
+    <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        min-height: 100%;
+        background: linear-gradient(to bottom right, #7f1d1d, #000000, #1f2937);
+      }
+
+      #elm {
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="elm"></div>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
     <script>
       var app = Elm.Main.init({ node: document.getElementById('elm') });
     </script>
   </body>
 </html>
+
