Deployment and readme updates

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="elm"></div>
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
     <script>
       var app = Elm.Main.init({ node: document.getElementById('elm') });
     </script>
