API fixes and responsive width components

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F1 Dashboard</title>
+    <link rel="stylesheet" href="/style.css" />
     <style>
       html, body {
         margin: 0;
         padding: 0;
-        min-height: 100%;
-        background: linear-gradient(to bottom right, #7f1d1d, #000000, #1f2937);
       }
 
       #elm {
